--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Mustafa Eren İncedalcı",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
@@ -23,9 +24,11 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
+    "pako": "^2.1.0",
     "psd": "^3.4.0",
     "react-bootstrap": "^2.8.0",
     "request": "^2.88.2",
+    "sharp": "^0.32.4",
     "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "^3.3.3",
     "three": "^0.154.0"
