--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Mustafa Eren İncedalcı",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -23,7 +24,9 @@
     "fs": "^0.0.1-security",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "mongoose": "^5.12.2",
+    "multer": "^1.4.5-lts.1",
     "pako": "^2.1.0",
     "psd": "^3.4.0",
     "react-bootstrap": "^2.8.0",
