--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "client",
+  "name": "filerobot-image-editor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.3.0",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^17.0.2",
-    "react-moment": "^1.1.1",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
+    "react-dom": "^18.2.0",
+    "react-filerobot-image-editor": "^4.5.1",
+    "react-moment": "^1.1.3",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.2",
     "tailwind-gradient-mask-image": "^1.0.0",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.1"
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
-    "build": "npm run watch:css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "watch:css": "postcss src/tailwind.css -o src/App.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
