--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "ag-psd": "^17.0.5",
-    "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "bootstrap": "^5.3.0",
     "canvas": "^2.11.2",
     "circular-json": "^0.5.9",
     "config": "^3.3.6",
@@ -26,18 +24,14 @@
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "gravatar": "^1.8.1",
+    "imagemin": "^8.0.1",
+    "imagemin-pngquant": "^9.0.2",
     "jsonwebtoken": "^8.5.1",
     "mime": "^3.0.0",
     "mongoose": "^5.12.2",
     "multer": "^1.4.5-lts.1",
-    "pako": "^2.1.0",
     "path": "^0.12.7",
-    "psd": "^3.4.0",
-    "react-bootstrap": "^2.8.0",
     "request": "^2.88.2",
-    "tailwind-gradient-mask-image": "^1.0.0",
-    "tailwindcss": "^3.3.3",
-    "three": "^0.154.0",
     "winax": "^3.4.1"
   },
   "devDependencies": {
