--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-filerobot-image-editor": "^4.5.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-moment": "^1.1.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
