--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
+    "child_process": "^1.0.2",
     "circular-json": "^0.5.9",
     "config": "^3.3.6",
     "cors": "^2.8.5",
@@ -31,8 +32,7 @@
     "mongoose": "^5.12.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "request": "^2.88.2",
-    "winax": "^3.4.1"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
