--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "base64-js": "^1.5.1",
     "bootstrap": "^5.3.1",
     "filerobot-image-editor": "^4.5.1",
+    "perspectivejs": "^1.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
