--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "base64-js": "^1.5.1",
     "bootstrap": "^5.3.1",
     "filerobot-image-editor": "^4.5.1",
     "perspectivejs": "^1.0.3",
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "tailwind-gradient-mask-image": "^1.0.0",
     "uuid": "^9.0.0",
