--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
-    "filerobot-image-editor": "^4.5.1",
     "perspectivejs": "^1.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -26,9 +25,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "tailwind-gradient-mask-image": "^1.0.0",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "tailwind-gradient-mask-image": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
