resized mockup psds

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules/
 client/node_modules/
 upload/
-client/src/utils/Constant.js
+client/src/utils/
 mockupfiles/output_psd.psd
 mockupfiles/result_origin.png
