--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "filerobot-image-editor",
+  "name": "ecover",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dannyboy66/react-filerobot-image-editor": "^1.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
@@ -16,7 +17,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-filerobot-image-editor": "^4.5.1",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
